# multiconf

./: CMakeLists.txt  README.md
inc/: input.hh  parser.hh  rules.hh
src/: input.cpp  main.cpp  parser.cpp  rules.cpp
test/: testsuit.sh
test/simple/base001/: env  expected
test/simple/base002/: expected
test/simple/base003/: out
test_files/: avec_balise  failed_balise
